remove preview feature